[package]
name = "walle-k"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walle-core = { version = "0.7.0-a1", features = ["impl-obc", "websocket"] }
kook = { git = "https://github.com/abrahum/kook.git" }
once_cell = "1"

serde = { version = "*", features = ["derive"] }
toml = "0.5"

tracing = "0.1"
tracing-subscriber = "0.3"

tokio = { version = "1", features = ["full"] }
