[package]
name = "walle-k"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walle-core = { version = "0.7.1", features = ["impl-obc", "websocket", "alt"] }
kook = { git = "https://github.com/abrahum/kook.git" }
once_cell = "1"

serde = { version = "*", features = ["derive"] }
toml = "0.5"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "time"] }
tracing-appender = "*"
chrono = "*"
time = { version = "0.3", features = ["macros"] }

tokio = { version = "1", features = ["full"] }

[profile.release]
lto = true
strip = true
opt-level = 'z'
debug = false
